app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-app-ingress
  annotations:
    tailscale.com/funnel: "true"
spec:
  defaultBackend:
    service:
      name: sampleapi-svc
      port:
        number: 80
  ingressClassName: tailscale
  tls:
    - hosts:
        - sampleapi-svc
